--- a/sass/components/_mobmenu.scss
+++ b/sass/components/_mobmenu.scss
@@ -3,9 +3,12 @@
 	top: 0;
 	left: 0;
 
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
 	width: 100%;
 	height: 100%;
-	padding: 10vw 7vw;
+	padding: 50px 24px 20px;
 	overflow-y: scroll;
 
 	background-color: var(--design-white-color);
@@ -29,7 +32,6 @@
 	width: 40px;
 	height: 40px;
 	padding: 0;
-	// margin-left: auto;
 	border: none;
 
 	color: var(--main-color);
@@ -52,18 +54,16 @@
 	fill: currentColor;
 }
 
-.mob-nav {
-	margin-bottom: 63vw;
-}
-
 .mob-nav__item {
+	text-align: center;
+
 	&:not(:last-child) {
-		margin-bottom: 6.7vw;
+		margin-bottom: 16px;
 	}
 }
 
 .mob-nav__link {
-	font-size: 8vw;
+	font-size: 26px;
 	line-height: 1.175;
 	font-weight: 500;
 	letter-spacing: 0.02em;
@@ -77,13 +77,20 @@
 }
 
 .mob-address {
-	margin-bottom: 13vw;
+	margin-bottom: 30px;
+
+	text-align: center;
+
+	@media screen and (min-width: 375px) {
+		margin-left: auto;
+		margin-right: auto;
+	}
 }
 
 .mob-address__link {
 	display: block;
 
-	font-size: 5vw;
+	font-size: 16px;
 	line-height: 1.167;
 	font-weight: 500;
 	letter-spacing: 0.02em;
@@ -98,7 +105,7 @@
 	}
 
 	&:not(:last-child) {
-		margin-bottom: 6.7vw;
+		margin-bottom: 10px;
 	}
 }
 
