--- a/sass/main.scss
+++ b/sass/main.scss
@@ -3,6 +3,7 @@
 @import './utils/visually-hidden';
 @import './common/base';
 @import './utils/placeholders';
+@import './utils/mixins';
 @import './components/logo';
 @import './components/social';
 @import './layout/header';
