--- a/css/main.css
+++ b/css/main.css
@@ -263,7 +263,12 @@ summary {
   overflow: hidden;
 }
 
+html {
+  height: 100%;
+}
+
 body {
+  height: 100%;
   font-family: var(--main-text);
   font-size: 14px;
   line-height: 1.143;
@@ -305,6 +310,23 @@ img {
   display: block;
   max-width: 100%;
   height: auto;
+}
+
+.wrapper {
+  min-height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.main {
+  -webkit-box-flex: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
 }
 
 .container {
