--- a/sass/common/_base.scss
+++ b/sass/common/_base.scss
@@ -1,4 +1,10 @@
+html {
+	height: 100%;
+}
+
 body {
+	height: 100%;
+
 	font-family: var(--main-text);
 	font-size: 14px;
 	line-height: 1.143;
@@ -44,6 +50,16 @@ img {
 	display: block;
 	max-width: 100%;
 	height: auto;
+}
+
+.wrapper {
+	min-height: 100%;
+	display: flex;
+	flex-direction: column;
+}
+
+.main {
+	flex-grow: 1;
 }
 
 .container {
