--- a/css/main.css
+++ b/css/main.css
@@ -1081,7 +1081,7 @@ img {
   left: 0;
   width: 100%;
   height: 100%;
-  overflow-y: scroll;
+  overflow-y: auto;
   background-color: rgba(0, 0, 0, 0.2);
   opacity: 1;
   -webkit-transition: opacity 250ms var(--timing-fn);
@@ -1100,7 +1100,7 @@ img {
 .modal {
   border-radius: 4px;
   padding: 8.333vw;
-  overflow-y: scroll;
+  overflow-y: auto;
   background-color: var(--design-white-color);
   -webkit-box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.12), 0 1px 1px 0 rgba(0, 0, 0, 0.14), 0 2px 1px 0 rgba(0, 0, 0, 0.2);
           box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.12), 0 1px 1px 0 rgba(0, 0, 0, 0.14), 0 2px 1px 0 rgba(0, 0, 0, 0.2);
