--- a/sass/layout/_modal.scss
+++ b/sass/layout/_modal.scss
@@ -5,7 +5,7 @@
 
 	width: 100%;
 	height: 100%;
-	overflow-y: scroll;
+	overflow-y: auto;
 
 	background-color: rgba(0, 0, 0, 0.2);
 	opacity: 1;
@@ -26,7 +26,7 @@
 .modal {
 	border-radius: 4px;
 	padding: 8.333vw;
-	overflow-y: scroll;
+	overflow-y: auto;
 
 	background-color: var(--design-white-color);
 	box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.12), 0 1px 1px 0 rgba(0, 0, 0, 0.14),
